# attitude-representation-translation

./: CMakeLists.txt  README.md
AttitudeMathLib/: AMLMatrix33.cpp  AMLMatrix33.h  AMLVector3.cpp  AMLVector3.h  AttitudeMathLib.h  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
test/: AMLVector3Test.cpp  CMakeLists.txt
